[tool.poetry]
name = "netbox-lists"
version = "4.0.0"
description = ""
authors = ["Devon Mar <devonm@mdmm.ca>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
netaddr = ">=0.8,<1.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pynetbox = "^7"
requests = "^2"
mypy = "^1.10"
ruff = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = ["mypy_django_plugin.main"]

disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "rest_framework.*",
    "taggit.*",
    "django_filters",
    "netaddr.*",
    # NetBox
    "dcim.*",
    "ipam.*",
    "extras.*",
    "virtualization.*",
]
ignore_missing_imports = true
