[project]
name = "netbox-lists"
version = "4.0.2"
description = ""
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  {name = "Devon Mar", email = "devon-mar@users.noreply.github.com"},
]
dependencies = [
  "netaddr>=0.8.0,<2.0.0",
]

[dependency-groups]
dev = [
  "pytest~=8.3.0",
  "pynetbox~=7.0",
  "requests~=2.0",
  "mypy~=1.15.0",
  "ruff~=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["netbox_lists"]

[mypy]
plugins = ["mypy_django_plugin.main"]

disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "rest_framework.*",
    "taggit.*",
    "django_filters",
    "netaddr.*",
    # NetBox
    "dcim.*",
    "ipam.*",
    "extras.*",
    "virtualization.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "C4",
  "E",
  "EXE",
  "F",
  "I",
  "ISC",
  "PERF",
  "PIE",
  "PYI",
  "UP",
  "W",
]
ignore = [
  "E501",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
